--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+@keyframes sway {
+  0%,
+  100% {
+    transform: rotate(0deg) translateX(0px);
+  }
+  25% {
+    transform: rotate(-5deg) translateX(-5px);
+  }
+  75% {
+    transform: rotate(5deg) translateX(5px);
+  }
+}
+
+.swaying {
+  transform-origin: bottom center;
+  animation: sway 4s ease-in-out infinite;
+}
