--- a/src/index.css
+++ b/src/index.css
@@ -84,3 +84,53 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.svg-animation {
+  animation-name: fadeIn;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-out;
+  animation-duration: 1s; /* Adjust duration to control speed */
+  animation-iteration-count: infinite; /* Loop indefinitely */
+  opacity: 0; /* Start invisible */
+}
+
+.svg1 {
+  animation-delay: 0s;
+}
+.svg2 {
+  animation-delay: 0.5s;
+} /* Delay appearance */
+.svg3 {
+  animation-delay: 1s;
+}
+.svg4 {
+  animation-delay: 1.5s;
+}
+.svg5 {
+  animation-delay: 2s;
+}
+/* Reset to invisible state for looping */
+.svg1 {
+  animation-delay: 2.5s;
+}
+.svg2 {
+  animation-delay: 3s;
+}
+.svg3 {
+  animation-delay: 3.5s;
+}
+.svg4 {
+  animation-delay: 4s;
+}
+.svg5 {
+  animation-delay: 4.5s;
+}
